fix: Flash Of Invisible Text (FOIT) happening

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,5 +1,6 @@
 /* heebo-100 - latin */
 @font-face {
+	font-display: swap;
 	font-family: 'Heebo';
 	font-style: normal;
 	font-weight: 100;
@@ -8,6 +9,7 @@
 }
 /* heebo-200 - latin */
 @font-face {
+	font-display: swap;
 	font-family: 'Heebo';
 	font-style: normal;
 	font-weight: 200;
@@ -16,6 +18,7 @@
 }
 /* heebo-300 - latin */
 @font-face {
+	font-display: swap;
 	font-family: 'Heebo';
 	font-style: normal;
 	font-weight: 300;
@@ -24,6 +27,7 @@
 }
 /* heebo-regular - latin */
 @font-face {
+	font-display: swap;
 	font-family: 'Heebo';
 	font-style: normal;
 	font-weight: 400;
@@ -32,6 +36,7 @@
 }
 /* heebo-500 - latin */
 @font-face {
+	font-display: swap;
 	font-family: 'Heebo';
 	font-style: normal;
 	font-weight: 500;
@@ -40,6 +45,7 @@
 }
 /* heebo-600 - latin */
 @font-face {
+	font-display: swap;
 	font-family: 'Heebo';
 	font-style: normal;
 	font-weight: 600;
@@ -48,6 +54,7 @@
 }
 /* heebo-700 - latin */
 @font-face {
+	font-display: swap;
 	font-family: 'Heebo';
 	font-style: normal;
 	font-weight: 700;
@@ -56,6 +63,7 @@
 }
 /* heebo-800 - latin */
 @font-face {
+	font-display: swap;
 	font-family: 'Heebo';
 	font-style: normal;
 	font-weight: 800;
@@ -64,6 +72,7 @@
 }
 /* heebo-900 - latin */
 @font-face {
+	font-display: swap;
 	font-family: 'Heebo';
 	font-style: normal;
 	font-weight: 900;
